--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="Fr">
 <head>
-  <title>Analiste d'affaires et management des données</title>
+  <title>Analyste d'affaires et management des données</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +10,16 @@
   <meta name="author" content="Bucky Maler">
   <link rel="icon" href="assets/img/favicon.png">
   <link rel="stylesheet" href="assets/css/main.css">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10962901552">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-10962901552');
+</script>
 </head>
 <body>
 
