--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="Fr">
 <head>
+  <script src="https://cdn-eu.pagesense.io/js/20104296096/259f0558a5354e7eaf4dfadb2c120dd2.js"></script>
   <title>Analyste d'affaires et management des données</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
