--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="Fr">
 <head>
-  <script src="https://cdn-eu.pagesense.io/js/20104296096/259f0558a5354e7eaf4dfadb2c120dd2.js"></script>
+  <script type="text/javascript">(function(w,s){var e=document.createElement("script");e.type="text/javascript";e.async=true;e.src="https://cdn-eu.pagesense.io/js/20104296096/259f0558a5354e7eaf4dfadb2c120dd2.js";var x=document.getElementsByTagName("script")[0];x.parentNode.insertBefore(e,x);})(window,"script");</script>
   <title>Analyste d'affaires et management des données</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
