--- a/index.html
+++ b/index.html
@@ -178,14 +178,13 @@
                   <div class="modal--information">
                     <p>Analyste d'affaires Montreal</p>
                     <p>Montréal, Québec</p>
-                    <a href="mailto:contact@analyzeandmanage.ca">contact@analyzeandmanage.ca</a>
                     <a href="tel:+1 438 238 9850">+1 438 238 9850</a>
                   </div>
                   <ul class="modal--options">
                     <!--<a href="#0">Bēhance</a></li>
                     <li><a href="#0">dribbble</a></li>
                     -->
-                    <li><a href="mailto:contact@analyzeandmanage.ca">Contact Us</a></li>
+                    <li><a class="cta">Contact Us</a></li>
                   </ul>
                 </div>
               </div>
