--- a/index.html
+++ b/index.html
@@ -33,7 +33,31 @@
 </script>
 </head>
 <body>
+  <div id="popup">
+    <div class="popup-content">
+      <span class="close-btn" onclick="closePopup()">&times;</span>
+      <h2>Demandez notre documentation</h2>
+      <p>Découvrez nos services d’optimisation des processus et de gestion de données.</p>
+      <form action='https://forms.zohopublic.eu/contactanalyzea1/form/Notredocumentation/formperma/x7EX3OoeMnsFWUv-PxpYf6cn-fe4aEHRzcYbxCOmH5I/htmlRecords/submit' name='form' id='form' method='POST' accept-charset='UTF-8' enctype='multipart/form-data'>
+        <input type="hidden" name="zf_referrer_name" value=""><!-- To Track referrals , place the referrer name within the " " in the above hidden input field -->
+        <input type="hidden" name="zf_redirect_url" value=""><!-- To redirect to a specific page after record submission , place the respective url within the " " in the above hidden input field -->
+        <input type="hidden" name="zc_gad" value=""><!-- If GCLID is enabled in Zoho CRM Integration, click details of AdWords Ads will be pushed to Zoho CRM -->
+        <p></p>
+        <!--Name-->
+        <label> Nom 
+        <em>*</em>
+        </label>
+        <input type="text" maxlength="255" name="Name_First" fieldType=7 placeholder="" />
+        <label>Pr&eacute;nom</label>
+        <input type="text" maxlength="255" name="Name_Last" fieldType=7 placeholder="" />
+        <!--Email-->
+        <label> E-mail 
+        </label>
+        <input type="text" maxlength="255" name="Email" value="" fieldType=9 placeholder="" />
+        <button type="submit"><em>Envoyer</em></button></form>
 
+    </div>
+  </div>
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
@@ -65,7 +89,7 @@
             <li><span>Notre travail</span></li>
             <li><span>A propos</span></li>
             <li><span>Contact</span></li>
-            <li><span>Nous embaucher</span></li>
+            <li><span>En savoir plus</span></li>
           </ul>
         </nav>
         <ul class="l-main-content main-content">
@@ -194,7 +218,7 @@
                     <!--<a href="#0">Bēhance</a></li>
                     <li><a href="#0">dribbble</a></li>
                     -->
-                    <li><a class="cta">Contact Us</a></li>
+                    <li><a class="cta">Nous contacter</a></li>
                   </ul>
                 </div>
               </div>
@@ -202,7 +226,7 @@
           </li>
           <li class="l-section section">
             <div class="hire">
-              <h2>Formulaire</h2>
+              <h2>En savoir plus</h2>
               <div class="form-container">
                 <form action="https://forms.zohopublic.eu/contactanalyzea1/form/BastienandCo/formperma/qh8ExcvADjwMwLwmeOfl1hD87lNCINsvhell0VssR5I/htmlRecords/submit" 
                       name="form" id="form" method="POST" accept-charset="UTF-8" enctype="multipart/form-data">
@@ -240,12 +264,13 @@
     <li>Notre travail</li>
     <li>A propos</li>
     <li>Contact</li>
-    <li>Nous embaucher</li>
+    <li>En savoir plus</li>
   </ul>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
 <script src="assets/js/functions-min.js"></script>
+<script src="assets/js/script2.js"></script>
 </body>
 </html>
