--- a/index.html
+++ b/index.html
@@ -33,31 +33,32 @@
 </script>
 </head>
 <body>
+  <!--
   <div id="popup">
     <div class="popup-content">
       <span class="close-btn" onclick="closePopup()">&times;</span>
       <h2>Demandez notre documentation</h2>
       <p>Découvrez nos services d’optimisation des processus et de gestion de données.</p>
       <form action='https://forms.zohopublic.eu/contactanalyzea1/form/Notredocumentation/formperma/x7EX3OoeMnsFWUv-PxpYf6cn-fe4aEHRzcYbxCOmH5I/htmlRecords/submit' name='form' id='form' method='POST' accept-charset='UTF-8' enctype='multipart/form-data'>
-        <input type="hidden" name="zf_referrer_name" value=""><!-- To Track referrals , place the referrer name within the " " in the above hidden input field -->
-        <input type="hidden" name="zf_redirect_url" value=""><!-- To redirect to a specific page after record submission , place the respective url within the " " in the above hidden input field -->
-        <input type="hidden" name="zc_gad" value=""><!-- If GCLID is enabled in Zoho CRM Integration, click details of AdWords Ads will be pushed to Zoho CRM -->
+        <input type="hidden" name="zf_referrer_name" value="">
+        <input type="hidden" name="zf_redirect_url" value="">
+        <input type="hidden" name="zc_gad" value="">
         <p></p>
-        <!--Name-->
+
         <label> Nom 
         <em>*</em>
         </label>
         <input type="text" maxlength="255" name="Name_First" fieldType=7 placeholder="" />
         <label>Pr&eacute;nom</label>
         <input type="text" maxlength="255" name="Name_Last" fieldType=7 placeholder="" />
-        <!--Email-->
+
         <label> E-mail 
         </label>
         <input type="text" maxlength="255" name="Email" value="" fieldType=9 placeholder="" />
         <button type="submit"><em>Envoyer</em></button></form>
 
     </div>
-  </div>
+  </div> -->
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
