--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
     <img src="assets/img/favicon.png" alt="Global">
-    <p>Analyste d'affaires
-      Montréal</p>
+    <p>Digital Data Solutions</p>
   </a>
   <p class="device-notification--message">Nous proposons un accompagnement dans l'optimisation des données et la mise en place stratégique.</p>
 </div>
@@ -211,7 +210,7 @@
               <div class="contact--lockup">
                 <div class="modal">
                   <div class="modal--information">
-                    <p>Analyste d'affaires Montreal</p>
+                    <p>Digital Data Solutions</p>
                     <p>Montréal, Québec</p>
                     <a href="tel:+1 438 238 9850">+1 438 238 9850</a>
                   </div>
