--- a/eng.html
+++ b/eng.html
@@ -241,7 +241,7 @@
                     <input type="text" name="Name_Last" maxlength="255" placeholder="First Name" />
                     
                     <label>E-mail</label>
-                    <input type="email" name="Email" maxlength="255" placeholder="Your email" required />
+                    <input type="email" name="Email" maxlength="255" placeholder="Your Email" required />
                     
                     <label>Phone</label>
                     <input type="text" name="PhoneNumber_countrycode" maxlength="20" placeholder="Phone number" />
