--- a/eng.html
+++ b/eng.html
@@ -75,7 +75,7 @@
         <header class="header">
           <a class="header--logo" href="#0">
             <img src="assets/img/logo.png" alt="Global">
-            <p>Digital Data Solutionsl</p>
+            <p>Digital Data Solutions</p>
           </a>
           <button class="header--cta cta">Contact</button>
           <div class="header--nav-toggle">
