--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
   <script type="text/javascript">(function(w,s){var e=document.createElement("script");e.type="text/javascript";e.async=true;e.src="https://cdn-eu.pagesense.io/js/20104296096/259f0558a5354e7eaf4dfadb2c120dd2.js";var x=document.getElementsByTagName("script")[0];x.parentNode.insertBefore(e,x);})(window,"script");</script>
   <title>Analyste d'affaires et management des données</title>
   <meta charset="utf-8">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Optimisation des données, business analyst, génération de leads, mise en place de CRM">
   <meta name="keywords" content="global, template, html, sass, jquery">
   <meta name="author" content="Bucky Maler">
   <link rel="icon" href="assets/img/favicon.png">
+  <link rel="canonical" href="https://www.digitaldatasolutions.ca">
+
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/main2.css">
   <!-- Google tag (gtag.js) -->
