--- a/eng.html
+++ b/eng.html
@@ -18,6 +18,7 @@
   <meta name="description" content="Optimization of data, business analyst, lead generation, CRM implementation">
   <meta name="keywords" content="global, template, html, sass, jquery">
   <meta name="author" content="Bucky Maler">
+  <link rel="canonical" href="https://www.datadigitalsolutions.ca/eng.html">
   <link rel="icon" href="assets/img/favicon.png">
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/main2.css">
