--- a/eng.html
+++ b/eng.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Digital Data Solutions",
+      "url": "https://www.digitaldatasolutions.ca",
+      "logo": "https://www.digitaldatasolutions.ca/assets/img/logo.png",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+1 438 238 9850",
+        "contactType": "customer service",
+        "areaServed": "CA",
+        "availableLanguage": "French"
+      },
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Montréal",
+        "addressRegion": "QC",
+        "addressCountry": "Canada"
+      }
+    }
+    </script>
+    
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SS8JYD6P8V"></script>
 <script>
