--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
         <header class="header">
           <a class="header--logo" href="#0">
             <img src="assets/img/logo.png" alt="Global">
-            <p>Analyste d'affaires
-     Montréal</p>
+            <p>Digital Data Solutions</p>
           </a>
           <button class="header--cta cta">Contact</button>
           <div class="header--nav-toggle">
