--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Digital data solution</title>
+<script src="scripts/generate-sitemap.js" defer></script>
+
 <link rel="stylesheet" href="styles.css">
 <style>
     /* Styles généraux */
